including documentation help, source code and feedback.  If you are interested
in contributing, please visit http://incubator.apache.org/uima/get-involved.html.


5. How to Report Issues

The Apache UIMA project uses JIRA for issue tracking.  Please report any 
issues you find at http://issues.apache.org/jira/browse/uima.


6. List of JIRA Issues Fixed in this Release


Release Notes - UIMA - Version 2.2.2


** Bug
    * [UIMA-475] - Document Analyzer and CPE GUI have trouble running AE's multiple times
    * [UIMA-498] - TAEConfiguratorPlugin throws NullPointer during activation
    * [UIMA-552] - Documentation for applications has non-working examples of API use (wrong number of args, reversed args)
    * [UIMA-591] - In uimaj-examples the AdvancedFixedFlowController method removeAnalysisEngines is incorrect
    * [UIMA-643] - TypeSystemUtil.type2TypeDescription() throws NPE when the superType is null
    * [UIMA-672] - Wrong URL for mirrors support in the Eclipse update site
    * [UIMA-677] - improve MD5 and SHA1 checksum generation
    * [UIMA-680] - CAS is not unlocked on Errors
    * [UIMA-686] - Deadlocks in CPM tests:CPM shutdown tests failing (hanging) intermittantly
    * [UIMA-698] - wrong eclipse update site top level name - fix to match documentation
    * [UIMA-722] - Fix parsing of language specifications to normalize them
    * [UIMA-726] - ArrayFSImpl.copyToArray will throw NPE when array element is null
    * [UIMA-727] - Result Specifications not being passed to imbedded Pears
    * [UIMA-729] - CasCopier doesn't work with Annotations produced with LowLevelCAS API, which don't have their sofa feature set
    * [UIMA-730] - Fix definition of containsType/Feature for Resut Spec for corner case involving x-unspecified language
    * [UIMA-732] - featurePath object  throws LowLevelCASException if FS is not valid for feature path.