@@ -286,6 +286,18 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-897'>UIMA-897</a>] -         users of uimaj-ep-runtime plugin having trouble due to jar inside jar structure
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-898'>UIMA-898</a>] -         documentAnalyzer throws NPE
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-899'>UIMA-899</a>] -         DocumentAnalyzer does not creat all output types for UIMA Analysis example
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-906'>UIMA-906</a>] -         SOAP deployment does not work properly
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-913'>UIMA-913</a>] -         cleanup and simplify C++ service wrapper implementation
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-923'>UIMA-923</a>] -         update the run examples scripts to use XMI format of CAS.
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-936'>UIMA-936</a>] -         NPE when serializing a CAS with a String array that contains a null value element
+</li>
 </ul>
     
 <h2>        Improvement
@@ -337,6 +349,10 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-877'>UIMA-877</a>] -         Reverse multiple copyright statements in docbooks, per request at previous release vote
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-920'>UIMA-920</a>] -         remove extraneous LICENSE files in uima-docbook-tool lib directory
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-933'>UIMA-933</a>] -         [CDE] In CDE GUI, the border of some tables and combobox is not visible 
+</li>
 </ul>
     
 <h2>        New Feature
@@ -370,6 +386,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-749'>UIMA-749</a>] -         add performance report to CVD
 </li>
 </ul>
+
                         
 </body>
 </html>
